--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
+    "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
     "jsdoc-api": "^7.1.1",
     "nanostores": "^0.5.13",
@@ -107,8 +108,8 @@
     "rollup": "^3.23.1",
     "sass": "^1.54.3",
     "search-insights": "^2.6.0",
-    "workbox-build": "^7.0.0",
-    "workbox-window": "^7.0.0"
+    "workbox-build": "6.5.4",
+    "workbox-window": "6.5.4"
   },
   "engines": {
     "node": "^14.15.0 || >=16.0.0",
