--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
+    "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
     "jsdoc-api": "^7.1.1",
