updated env file

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 PUBLIC_FEATURE_DARKMODE="false"
 PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
-PUBLIC_FEATURE_FEEDBACK=true
-PUBLIC_FEATURE_PWA=false
+PUBLIC_FEATURE_FEEDBACK="true"
+PUBLIC_FEATURE_PWA="false"
