--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
 PUBLIC_FEATURE_PWA="false"
+PUBLIC_FEATURE_CHAT="false"
