updated feedback tool to use env variable for key

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
 PUBLIC_FEATURE_PWA="false"
 PUBLIC_FEATURE_CHAT="false"
+
+# Public Keys
+PUBLIC_FEEDBACK_KEY="dd364817a29ffd"
