testing chatgpt integration needs to be server side so doing deploy preview test

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Feature Controls
-PUBLIC_FEATURE_DARKMODE="false"
+PUBLIC_FEATURE_DARKMODE="true"
 PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
@@ -8,3 +8,4 @@ PUBLIC_FEATURE_CHAT="false"
 
 # Public Keys
 PUBLIC_FEEDBACK_KEY="dd364817a29ffd"
+OPENAI_API_KEY="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"
