--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 # Feature Controls
-PUBLIC_FEATURE_DARKMODE="false"
+PUBLIC_FEATURE_DARKMODE="true"
 PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
 PUBLIC_FEATURE_PWA="false"
 PUBLIC_FEATURE_CHAT="false"
+PUBLIC_FEATURE_ANALYTICS="true"
 
 # Public Keys
+PUBLIC_KEY_GTM="GTM-T73M956"
 PUBLIC_FEEDBACK_KEY="dd364817a29ffd"
