--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@
     package = "@algolia/netlify-plugin-crawler"
       [plugins.inputs]
       branches = ['main']
-      disabled = true
+      disabled = false
       pathPrefix = "/en/"
       customDomain = "grovery-core-toolkit-staging.netlify.app"
       renderJavaScript = true
