added algoia env vars in .env file

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ PUBLIC_FEATURE_ANALYTICS="true"
 # Public Keys
 PUBLIC_KEY_GTM="GTM-T73M956"
 PUBLIC_FEEDBACK_KEY="dd364817a29ffd"
+
+# Netlify ENV Vars
+ALGOLIA_API_KEY="231ef1ebf42d7b0b55a06a0accfd9afa"
+ALGOLIA_BASE_URL="https://crawler.algolia.com"
