--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "@astrojs/prefetch": "^0.3.0",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
     "astro-breadcrumbs": "^1.6.0",
