--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
 PUBLIC_FEATURE_PWA="false"
 PUBLIC_FEATURE_CHAT="false"
-PUBLIC_FEATURE_ANALYTICS="true"
+PUBLIC_FEATURE_ANALYTICS="false"
 
 # Public Keys
 PUBLIC_KEY_GTM="GTM-T73M956"
