--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ PUBLIC_FEATURE_DARKMODE="true"
 PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
-PUBLIC_FEATURE_PWA="false"
+PUBLIC_FEATURE_PWA="true"
 PUBLIC_FEATURE_CHAT="false"
-PUBLIC_FEATURE_ANALYTICS="true"
+PUBLIC_FEATURE_ANALYTICS="false"
 
 # Public Keys
 PUBLIC_KEY_GTM="GTM-T73M956"
