testing disabling feedback form

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PUBLIC_FEATURE_DARKMODE="true"
 PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
-PUBLIC_FEATURE_FEEDBACK="true"
+PUBLIC_FEATURE_FEEDBACK="false"
 PUBLIC_FEATURE_PWA="true"
 PUBLIC_FEATURE_CHAT="false"
 PUBLIC_FEATURE_ANALYTICS="false"
