testing removing docsearch element

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Feature Controls
 PUBLIC_FEATURE_DARKMODE="true"
-PUBLIC_FEATURE_SEARCH="false"
+PUBLIC_FEATURE_SEARCH="true"
 PUBLIC_FEATURE_MULTILANGUAGE="false"
 PUBLIC_FEATURE_FEEDBACK="true"
 PUBLIC_FEATURE_PWA="true"
