--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@astrojs/prefetch": "^0.3.0",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
+    "algoliasearch": "^4.19.1",
     "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
