updated search button within modal and instant search

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
+    "instantsearch.js": "^4.56.9",
     "jquery": "^3.7.0",
     "jsdoc-api": "^7.1.1",
     "nanostores": "^0.5.13",
