Updates to search to appear on splash page, added hamburger icon

--- a/package.json
+++ b/package.json
@@ -102,9 +102,12 @@
     "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
+    "css-loader": "^6.8.1",
+    "hamburgers": "^1.2.1",
     "jquery": "^3.7.0",
     "jsdoc-api": "^7.1.1",
     "nanostores": "^0.5.13",
+    "node-sass": "^9.0.0",
     "qrcode": "^1.5.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
@@ -112,7 +115,9 @@
     "remark-smartypants": "^2.0.0",
     "rollup": "^3.23.1",
     "sass": "^1.54.3",
+    "sass-loader": "^13.3.2",
     "search-insights": "^2.6.0",
+    "style-loader": "^3.3.3",
     "workbox-build": "6.5.4",
     "workbox-window": "6.5.4"
   },
