--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
     "@astrojs/prefetch": "^0.3.0",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@nanostores/preact": "^0.1.3",
+    "@sanity/cli": "^3.16.4",
+    "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
     "algoliasearch": "^4.19.1",
     "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
