--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "@astrojs/prefetch": "^0.3.0",
     "@fontsource/ibm-plex-mono": "^4.5.10",
+    "@fontsource/montserrat": "^5.0.8",
     "@nanostores/preact": "^0.1.3",
     "algoliasearch": "^4.19.1",
     "astro-breadcrumbs": "^1.6.0",
