--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   },
   "dependencies": {
     "@astrojs/prefetch": "^0.3.0",
+    "@fontsource-variable/montserrat": "^5.0.9",
     "@fontsource/ibm-plex-mono": "^4.5.10",
     "@fontsource/montserrat": "^5.0.8",
     "@nanostores/preact": "^0.1.3",
