updated simple search to use env variables, pushing search indexer which requires 3 dependencies (dotenv, remove-markdown, gray-matter)

--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
+    "gray-matter": "^4.0.3",
     "hamburgers": "^1.2.1",
     "jquery": "^3.7.0",
     "jsdoc-api": "^7.1.1",
@@ -115,6 +117,7 @@
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "remark-smartypants": "^2.0.0",
+    "remove-markdown": "^0.5.0",
     "rollup": "^3.23.1",
     "sass": "^1.54.3",
     "sass-loader": "^13.3.2",
