--- a/package.json
+++ b/package.json
@@ -31,97 +31,97 @@
   },
   "devDependencies": {
     "@11ty/eleventy-fetch": "^3.0.0",
-    "@actions/core": "^1.9.0",
-    "@algolia/client-search": "^4.14.2",
-    "@astrojs/mdx": "^0.18.2",
-    "@astrojs/preact": "^2.0.3",
+    "@actions/core": "^1.10.1",
+    "@algolia/client-search": "^4.20.0",
+    "@astrojs/mdx": "^0.18.4",
+    "@astrojs/preact": "^2.2.2",
     "@astrojs/sitemap": "1.0.1",
-    "@babel/core": "^7.18.10",
-    "@docsearch/css": "^3.2.2",
-    "@docsearch/react": "3.5",
-    "@types/canvas-confetti": "^1.6.0",
-    "@types/chroma-js": "^2.1.4",
-    "@types/hast": "^2.3.4",
+    "@babel/core": "^7.22.20",
+    "@docsearch/css": "^3.5.2",
+    "@docsearch/react": "~3.5.2",
+    "@types/canvas-confetti": "^1.6.1",
+    "@types/chroma-js": "^2.4.1",
+    "@types/hast": "^2.3.6",
     "@types/html-escaper": "^3.0.0",
-    "@types/mdast": "^3.0.10",
-    "@types/node": "^18.6.4",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@types/mdast": "^3.0.12",
+    "@types/node": "^18.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vite-pwa/assets-generator": "^0.0.1",
     "@vite-pwa/astro": "^0.0.5",
-    "astro": "^2.1.4",
+    "astro": "^2.10.15",
     "astro-auto-import": "^0.2.1",
-    "astro-eslint-parser": "^0.9.2",
-    "astro-og-canvas": "^0.1.7",
-    "bcp-47-normalize": "^2.1.0",
-    "canvaskit-wasm": "^0.37.0",
+    "astro-eslint-parser": "^0.9.5",
+    "astro-og-canvas": "^0.1.8",
+    "bcp-47-normalize": "^2.3.0",
+    "canvaskit-wasm": "^0.37.2",
     "chroma-js": "^2.4.2",
     "dedent-js": "^1.0.1",
     "domhandler": "^4.3.1",
-    "eslint": "^8.29.0",
-    "eslint-plugin-astro": "^0.21.0",
-    "eslint-plugin-react": "^7.32.1",
-    "fast-glob": "^3.2.11",
-    "hast-util-from-html": "^1.0.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-astro": "^0.21.1",
+    "eslint-plugin-react": "^7.33.2",
+    "fast-glob": "^3.3.1",
+    "hast-util-from-html": "^1.0.2",
     "hast-util-to-string": "^2.0.0",
-    "hastscript": "^7.0.2",
+    "hastscript": "^7.2.0",
     "html-escaper": "^3.0.3",
     "htmlparser2": "^7.2.0",
     "kleur": "^4.1.5",
-    "mdast-util-from-markdown": "^1.2.0",
-    "mdast-util-mdx-jsx": "^2.1.2",
-    "mdast-util-to-hast": "^12.2.4",
-    "mdast-util-to-string": "^3.1.1",
-    "micromark-util-character": "^1.1.0",
-    "micromark-util-symbol": "^1.0.1",
-    "node-fetch": "^3.2.10",
+    "mdast-util-from-markdown": "^1.3.1",
+    "mdast-util-mdx-jsx": "^2.1.4",
+    "mdast-util-to-hast": "^12.3.0",
+    "mdast-util-to-string": "^3.2.0",
+    "micromark-util-character": "^1.2.0",
+    "micromark-util-symbol": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "organize-imports-cli": "^0.10.0",
-    "p-retry": "^5.1.1",
+    "p-retry": "^5.1.2",
     "parse-numeric-range": "^1.3.0",
-    "preact": "^10.10.1",
-    "prettier": "^2.8.1",
-    "prettier-plugin-astro": "^0.7.0",
+    "preact": "^10.17.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.7.2",
     "prompts": "^2.4.2",
     "rehype": "^12.0.1",
-    "remark": "^14.0.2",
+    "remark": "^14.0.3",
     "remark-directive": "^2.0.1",
-    "simple-git": "^3.11.0",
+    "simple-git": "^3.19.1",
     "tsm": "^2.3.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "unified": "^10.1.2",
-    "unist-util-remove": "^3.1.0",
-    "unist-util-visit": "^4.1.0",
-    "vfile": "^5.3.6",
+    "unist-util-remove": "^3.1.1",
+    "unist-util-visit": "^4.1.2",
+    "vfile": "^5.3.7",
     "vitest": "^0.28.5"
   },
   "dependencies": {
     "@astrojs/prefetch": "^0.3.0",
     "@fontsource-variable/montserrat": "^5.0.9",
-    "@fontsource/ibm-plex-mono": "^4.5.10",
+    "@fontsource/ibm-plex-mono": "^4.5.13",
     "@fontsource/montserrat": "^5.0.8",
     "@nanostores/preact": "^0.1.3",
-    "algoliasearch": "^4.19.1",
-    "astro-breadcrumbs": "^1.6.0",
+    "algoliasearch": "^4.20.0",
+    "astro-breadcrumbs": "^1.8.0",
     "astro-icon": "^0.8.1",
     "canvas-confetti": "^1.6.0",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "gray-matter": "^4.0.3",
     "hamburgers": "^1.2.1",
-    "jquery": "^3.7.0",
-    "jsdoc-api": "^7.1.1",
+    "jquery": "^3.7.1",
+    "jsdoc-api": "^7.2.0",
     "nanostores": "^0.5.13",
     "node-sass": "^9.0.0",
     "qrcode": "^1.5.3",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.0.1",
+    "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "remark-smartypants": "^2.0.0",
     "remove-markdown": "^0.5.0",
-    "rollup": "^3.23.1",
-    "sass": "^1.54.3",
+    "rollup": "^3.29.2",
+    "sass": "^1.67.0",
     "sass-loader": "^13.3.2",
-    "search-insights": "^2.6.0",
+    "search-insights": "^2.8.2",
     "style-loader": "^3.3.3",
     "workbox-build": "6.5.4",
     "workbox-window": "6.5.4"
