PWA / Offline mode code copy over

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "algoliasearch": "^4.19.1",
     "astro-breadcrumbs": "^1.6.0",
     "astro-icon": "^0.8.1",
+    "astrojs-service-worker": "^1.1.0",
     "canvas-confetti": "^1.6.0",
     "css-loader": "^6.8.1",
     "hamburgers": "^1.2.1",
